--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [12.x]
 
     steps:
       - uses: actions/checkout@v1
@@ -20,8 +20,9 @@ jobs:
         run: |
           yarn
           yarn test
-      - name: deploy
-        run: |
-          npm publish --access public
+      - name: GitHub Action for npm
+        uses: 'actions/npm@master'
+        args: 'publish --access public'
+        secrets: ['NPM_AUTH_TOKEN']
         env:
           CI: true
