--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,13 @@
+name: tests
+
+on:
+  push:
+    branches:
+      - master
+
 jobs:
   build:
+    name: Test and Deploy
     runs-on: ubuntu-16.04
     strategy:
       matrix:
