--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - run: |
           npm install
           npm test
-          npm config set //registry.npmjs.org/:_authToken' "${NPM_AUTH_TOKEN}"
+          npm config set '//registry.npmjs.org/:_authToken' "${NPM_AUTH_TOKEN}"
           npm publish
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
