--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,9 +1,10 @@
-name: tests
+name: check
 
 on:
   push:
     branches:
-      - master
+      - '*'
+      - !master
 
 jobs:
   build:
@@ -20,8 +21,3 @@ jobs:
           node-version: ${{ matrix.node }}
       - run: yarn
       - run: yarn test
-      - run: |
-          npm config set '//registry.npmjs.org/:_authToken' "${NPM_AUTH_TOKEN}"
-          npm publish
-        env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
