--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@nestpack/config",
-  "version": "0.0.2",
-  "description": "",
-  "author": "",
+  "version": "0.0.3",
+  "description": "Config module for NestJs projects",
+  "author": "Harry Horton",
   "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
