--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@nestpack/config",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Config module for NestJs projects",
   "author": "Harry Horton",
   "license": "MIT",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "app-root-path": "^2.2.1",
     "dotenv": "^8.1.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.5.3"
@@ -30,7 +32,7 @@
     "@nestjs/testing": "^6.0.0",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
-    "@types/node": "11.13.4",
+    "@types/node": "^12.7.5",
     "@types/supertest": "2.0.7",
     "jest": "24.7.1",
     "prettier": "1.17.0",
